// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render icon default slot 1`] = `
<i class="van-icon van-icon-success">Default slot
  <!----></i>
`;

exports[`render icon with builtin icon name 1`] = `
<i class="van-icon van-icon-success">
  <!----></i>
`;

exports[`render icon with url name 1`] = `
<i class="van-icon van-icon--image"><img src="https://img.yzcdn.com/icon.jpg">
  <!----></i>
`;

exports[`tag prop 1`] = `
<div class="van-icon van-icon-undefined">
  <!---->
</div>
`;
